--- a/src/components/HeroMission.css
+++ b/src/components/HeroMission.css
@@ -1,4 +1,4 @@
-.hero {
+.about-hero .hero {
   background: linear-gradient(120deg, #ffffff 60%, #ffffff);
 }
 
@@ -47,7 +47,7 @@
   font-size: 36px;
   margin: 24px 0;
   line-height: 1.2;
-  font-weight:600;
+  font-weight:600px;
 }
 
 .hero h1 span {
@@ -59,15 +59,16 @@
 }
 
 /* TEXT */
-.hero p {
+.hero-description {
   color: #555;
   font-size: 16px;
-  margin-top: 16px;
-  line-height: 1.6;
+  line-height: 1.7;
+  margin-top: 30px;
+  
 }
 
 /* IMAGE */
-.hero-image {
+.about-hero .hero-image {
   position: relative;
 }
 
